--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lucide-react": "^0.323.0",
     "next": "14.1.0",
     "next-cloudinary": "^5.20.0",
+    "nextjs-toploader": "^1.6.6",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.2.1",
